[gd_scene load_steps=3 format=3 uid="uid://dvkcs66smmkxv"]

[ext_resource type="Script" path="res://addons/simulation/Scripts/InspectorMenu.gd" id="1_oe7ux"]
[ext_resource type="PackedScene" uid="uid://v7kcoj5yld1j" path="res://addons/simulation/Scenes/LogicContainer.tscn" id="2_l6h4j"]

[node name="InspectorMenu" type="Control" node_paths=PackedStringArray("newLogic", "saveLogic", "logicHolder")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oe7ux")
newLogic = NodePath("BoxContainer/logicHolder/VBoxContainer/newLogic")
saveLogic = NodePath("BoxContainer/logicHolder/VBoxContainer/saveLogic")
logicHolder = NodePath("BoxContainer/logicHolder/VBoxContainer")
logicContainer = ExtResource("2_l6h4j")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="name" type="LineEdit" parent="BoxContainer"]
layout_mode = 2
placeholder_text = "Node Name"
alignment = 1

[node name="CheckBox" type="CheckBox" parent="BoxContainer"]
layout_mode = 2
text = "Make public"

[node name="HSeparator" type="HSeparator" parent="BoxContainer"]
layout_mode = 2

[node name="conditions" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Conditions
"
horizontal_alignment = 1

[node name="logicHolder" type="ScrollContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer/logicHolder"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="newLogic" type="Button" parent="BoxContainer/logicHolder/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "New Logic"

[node name="saveLogic" type="Button" parent="BoxContainer/logicHolder/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Save logic"

[node name="HSeparator2" type="HSeparator" parent="BoxContainer"]
layout_mode = 2

[node name="save" type="Button" parent="BoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Save node"

[node name="clone" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Clone group"

[node name="remove" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Remove group
"
